--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "repository": "https://github.com/CraftyDragon678/dimibob-gist",
   "author": "CraftyDragon678",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node ./src/index.ts"
+  },
   "devDependencies": {
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "@octokit/rest": "^18.0.0"
   }
 }
