--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "ts-node ./src/index.ts"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node-fetch": "^2.5.7",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   },
   "dependencies": {
     "@octokit/rest": "^18.0.0",
+    "dotenv": "^8.2.0",
     "node-fetch": "^2.6.0"
   }
 }
