chore: add yarn to install packages

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,7 +6,7 @@ name: Update gist
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   schedule:
     - cron: "10 0 * * *"
     - cron: "20 8 * * *"
@@ -21,10 +21,12 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - name: Update gist
-      uses: CraftyDragon678/dimibob-gist@master
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        GIST_ID: ${{ secrets.GIST_ID }}
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - name: install package 📦
+        run: yarn
+      - name: Update gist 🔄
+        uses: CraftyDragon678/dimibob-gist@master
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIST_ID: ${{ secrets.GIST_ID }}
