--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,12 +21,10 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
       - name: install package 📦
         run: yarn
       - name: Update gist 🔄
-        uses: CraftyDragon678/dimibob-gist@master
+        uses: yarn run dev
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID }}
